fix: gapを変数化

--- a/src/assets/styles/base/_grid.scss
+++ b/src/assets/styles/base/_grid.scss
@@ -1,15 +1,16 @@
 .container {
+  $gap: 1.5rem;
   position: relative;
-  max-width: calc(#{$tablet} - (2 * 1.5rem));
+  max-width: calc(#{$tablet} - (2 * #{$gap}));
   margin: 0 auto;
   padding: 0 1rem;
 
   @include desktop-only {
-    max-width: calc(#{$desktop} - (2 * 1.5rem));
+    max-width: calc(#{$desktop} - (2 * #{$gap}));
   }
 
   @include widescreen {
-    max-width: calc(#{$widescreen} - (2 * 1.5rem));
+    max-width: calc(#{$widescreen} - (2 * #{$gap}));
   }
 
   // @include fullhd {
